Move transition class to root. Delay is to prevent...
locomotive scrollbar animation flash caused by scroll to the top after update. Tweaks.

--- a/components/Figure/_Figure.scss
+++ b/components/Figure/_Figure.scss
@@ -32,7 +32,7 @@
       .Figure-figure-inner {
         clip-path: polygon(0% 100%, 100% 100%, 100% 0%, 0% 0%) !important;
         transform: scale(1) !important;
-        transition: $trans-primaryFast !important;
+        transition: $trans-primaryFastest !important;
       }
     }
   }
