--- a/stylesheets/generic/_base.scss
+++ b/stylesheets/generic/_base.scss
@@ -3,6 +3,13 @@
  * ======================================= */
 
 :root {
+  @include fontSize(
+    $minFontSize: $font-size,
+    $lineHeight: $lineHeight,
+    $maxFontSize: 999px,
+    $root: true,
+    $scaleValue: 1.25vw,
+  );
   --root-minWidth: #{$root-minWidth};
   --vh: 100vh;
 
@@ -28,14 +35,6 @@
 
   --Template-overlayColor: #{$Template-overlayColor};
 
-  @include fontSize(
-    $minFontSize: $font-size,
-    $lineHeight: $lineHeight,
-    $maxFontSize: 999px,
-    $root: true,
-    $scaleValue: 1.25vw,
-  );
-
   background-color: $root-bg;
   color: $text-700;
   font-family: $font-family;
@@ -60,8 +59,9 @@
     width: 100%;
   }
 
-  @include mq(mobile) {
-    overflow-y: scroll;
+  &.is-transition {
+    pointer-events: none;
+    touch-action: none;
   }
 
   @include mq(m) {
